--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -26,7 +26,7 @@
 .row
   .col-lg-3
   .col-lg-9
-    a(href="/admin/search/card/{{object.pk}}", title="{% trans 'Edit the card' %}") {% trans "Edit" %}
+    a(href="/stock/card/edit/{{object.pk}}", title="{% trans 'Edit the card' %}") {% trans "Edit" %}
 .row
   .col-lg-3
     .row
