--- a/templates/search/card_edit.jade
+++ b/templates/search/card_edit.jade
@@ -104,6 +104,7 @@ div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
     a(target="_blank", href="/admin/search/distributor/add")
         i.glyphicon.glyphicon-plus-sign
 
-  input.btn.btn-primary(value="{% trans 'continue...' %}", ng-click="validate()")
+  input.btn.btn-primary(value="{% trans 'View card' %}", ng-click="validate('view')")
+  input.btn.btn-primary(value="{% trans 'Buy...' %}", ng-click="validate('buy')")
 
 {% endblock content %}
