--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -27,6 +27,8 @@
   .col-lg-3
   .col-lg-9
     a(href="/stock/card/edit/{{object.pk}}", title="{% trans 'Edit the card' %}") {% trans "Edit" %}
+    a(href="{% url 'card_move' object.pk %}")
+      input.btn.btn-default(value="{% trans 'Move…' %}")
 .row
   .col-lg-3
     .row
