History UI: show movements

--- a/templates/search/history.jade
+++ b/templates/search/history.jade
@@ -43,12 +43,18 @@ div(ng-controller="historyController")
           a(href="{{ card.get_absolute_url }}")  {{ card.title }}
           {% endverbatim %}
 
-       div(ng-if="hist.item.model === 'Entry'")
+       div.list-group-item(ng-if="hist.item.model === 'Entry'")
          span {% verbatim %} {{ hist.item.created }}: {% endverbatim %} {% trans "New entry" %}: ({% verbatim %} {{ hist.item.payment }} {% endverbatim %})
          div(ng-repeat="item in hist.item.copies")
                {% verbatim %}
                a(href="{{ item.card.get_absolute_url }}") {{ item.card.title }}
                {% endverbatim %}
+
+       // horrible mess of tags !
+       div.list-group-item(ng-if="hist.item.model === 'InternalMovement'")
+         span {% verbatim %} {{ hist.item.created }}: {% endverbatim %} {% trans "Movement" %}: {% trans "Moved" %} {% verbatim %} {{ hist.item.nb }} {% endverbatim %} {% trans "copies" %} {% trans "from" %} {% verbatim %} {{ hist.item.origin.name }} {% endverbatim %} {% trans "to" %} {% verbatim %} {{ hist.item.dest.name }} {% endverbatim %}
+         a(href="hist.item.card.get_absolute_url")
+           div {% verbatim %} {{ hist.item.card.title }} {% endverbatim %}
 
   a(href="") more...
 
