--- a/templates/search/card_buy.jade
+++ b/templates/search/card_buy.jade
@@ -26,15 +26,10 @@
 form(method='post', action="{% url 'card_buy' card.id %}")
   {% csrf_token %}
   h4 {% trans "Buy cards" %}
-  div public price: {{ card.price }}
-  div discount: {{ card.distributor.discount }} %
-  div buying price: {{ buying_price }}
+  div {% trans "public price" %}: {{ card.price }}
+  div {% trans "discount" %}: {{ card.distributor.discount }} %
   div {{ form.as_p }}
 
-
   input.btn.btn-primary(type='submit', value='{% trans "Validate" %}')
-
-  if type == "move"
-    input.btn(value="Ok, and move again")
 
 {% endblock content %}
