--- a/templates/search/card_buy.jade
+++ b/templates/search/card_buy.jade
@@ -30,11 +30,15 @@ form(method='post', action="{% url 'card_buy' card.id %}")
       h4 {% trans "Buy cards" %}
       div {% trans "public price" %}: {{ card.price }}
       div {% trans "discount" %}: {{ card.distributor.discount }} %
+      div {% trans "buying price" %}: {{ buying_price }}
     .col-lg-3
       a(href="/admin/search/bill/add")
         div {% trans "create a Bill" %}
 
   div {{ form.as_p }}
   input.btn.btn-primary(type='submit', value='{% trans "Validate" %}')
+
+  if type == "move"
+    input.btn(value="Ok, and move again")
 
 {% endblock content %}
