--- a/templates/search/inventory_new.jade
+++ b/templates/search/inventory_new.jade
@@ -49,7 +49,7 @@ div(ng-controller="inventoryNewController")
   div(ng-cloak, ng-show="cards_selected", ng-repeat="card in cards_selected")
     h4
       a(href="{% verbatim %} {{ card.details_url }} {% endverbatim %}") {% verbatim %} {{card.title}} {% endverbatim %}
-      span {% verbatim %} {{card.authors}} {% endverbatim %}
+      span {% verbatim %} {{card.authors_repr}} {% endverbatim %}
       i.glyphicon.glyphicon-warning-sign(
         ng-show="{% verbatim %} cards_selected[$index].ambiguous_sell {% endverbatim %}"
         title="{% trans 'There is a conflict with deposits.' %}")
