--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -80,6 +80,7 @@ div.ng-cloak(ng-controller="sellController")
               typeahead-min-length="3"
               typeahead-on-select="add_selected_card($item)"
               title="{% trans 'Use TAB to validate your choice, Enter to proceed.' %}"
+              id="default-input"
             )
             i.glyphicon.glyphicon-refresh(ng-show='loadingCards')
 
