--- a/templates/search/inventory_new.jade
+++ b/templates/search/inventory_new.jade
@@ -26,8 +26,8 @@ h3 {% trans "Inventory ongoing" %}
 div(ng-controller="inventoryNewController")
   form(method="get")
     .row
+      h4 {% trans "Search in the stock" %}
       p.input-group
-          div {% trans "Search in the stock" %}
           input.nullable.form-control(
             type='text'
             typeahead-loading="loadingCards"
@@ -45,20 +45,19 @@ div(ng-controller="inventoryNewController")
               i.glyphicon.glyphicon-refresh
 
 
-  h3.ng-cloak(ng-show="cards_selected.length")
-    {% verbatim %} {{ getTotalCopies() }} {% endverbatim %} {% trans "titles selected. Total:" %} {% verbatim %} {{ total_price }} {% endverbatim %}
+  h4.ng-cloak(ng-show="cards_selected.length")
+    {% verbatim %} {{ getTotalCopies() }} {% endverbatim %} {% trans "titles selected." %}
   div(ng-cloak, ng-show="cards_selected", ng-repeat="card in cards_selected")
-    h4
+    div
+     .col-md-9
       a(href="{% verbatim %} {{ card.details_url }} {% endverbatim %}") {% verbatim %} {{card.title}} {% endverbatim %}
       span {% verbatim %} {{card.authors_repr}} {% endverbatim %}
       i.glyphicon.glyphicon-warning-sign(
         ng-show="{% verbatim %} cards_selected[$index].ambiguous_sell {% endverbatim %}"
         title="{% trans 'There is a conflict with deposits.' %}")
-      i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)", style="float: right;")
       i.glyphicon.glyphicon-exclamation-s
 
-     span
-        .col-md-1
+     .col-md-2
         p.input-group
             label.sr-only {% trans "Quantity" %}
             span.input-group-addon X
@@ -67,5 +66,8 @@ div(ng-controller="inventoryNewController")
                 ng-model="{% verbatim %} cards_selected[$index].quantity {% endverbatim %}"
                 ng-change="{% verbatim %} updateTotalPrice() {% endverbatim %}"
             )
+
+     .col-md-1
+       i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)", style="float: right;")
 
 {% endblock content %}
