ui-select start

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -21,7 +21,7 @@
 html(ng-app="abelujo")
   head
     link(rel='stylesheet', type='text/css', href='{% static "search/style.css" %}')
-    //- link(rel='stylesheet', type='text/css', href='{% static "bower_components/ui-select/dist/select.css" %}')
+    link(rel='stylesheet', type='text/css', href='{% static "bower_components/ui-select/dist/select.css" %}')
     script(type='text/javascript', src="{% static 'bower_components/jquery/jquery.js' %}") // load jquery before django_bootstrap.
     script(type='text/javascript', src="{% static 'js/build/vendor.js' %}")
     script(type='text/javascript', src="{% static 'js/build/abelujo.js' %}")
