--- a/templates/search/card_edit.jade
+++ b/templates/search/card_edit.jade
@@ -34,7 +34,7 @@ div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
     )
       {% verbatim %} {{alert.message}} {% endverbatim %}
 
- form
+ form(ng-show="card")
   .row
     .col-lg-12
         div.form-group
@@ -103,17 +103,15 @@ div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
 
   div
     h5 {% trans "Distributor" %}
-    select(ng-model="distributor", ng-options="dist.name + ' (discount: ' + dist.discount + ' %)' for dist in distributor_list")
+  div
+    ui-select(ng-model="distributor")
+      ui-select-match
+        span(ng-bind="$select.selected.name")
+      ui-select-choices(repeat="item in (distributor_list | filter:$select.search) track by item.id")
+        span(ng-bind="item.name")
     a(target="_blank", href="/admin/search/distributor/add")
-        i.glyphicon.glyphicon-plus-sign
-
-    //- ui-select(ng-model="distributor")
-      //- ui-select-match
-        //- span(ng-bind="$select.selected.name")
-      //- ui-select-choices(repeat="item in (getItemsApi('/api/distributors/', $null, 'distributor_list') | filter: $select.search) track by item.id")
-        //- span(ng-bind="item.name")
-    //- a(target="_blank", href="/admin/search/distributor/add")
-        //- i.glyphicon.glyphicon-plus-sign
+          i.glyphicon.glyphicon-plus-sign
+          ui-select(ng-model="distributor.selected")
 
   input.btn.btn-primary(value="{% trans 'View card' %}", ng-click="validate('view')")
   input.btn.btn-primary(value="{% trans 'Buy...' %}", ng-click="validate('buy')")
