UI view card: summary at the bottom

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -45,10 +45,6 @@
        div.panel-heading
         div.panel-content {{ object.comment }}
 
-      div.panel.panel-default {% trans "Summary" %}
-        div.panel-heading
-          div.panel-content {{ object.summary }}
-
   .col-lg-9
     h3 {{ object.title }}
     h4 {{ object.display_authors }}
@@ -93,5 +89,11 @@
                 li.list-group-item {{ sell.created }}
       else
         span ---
+
+.row
+    div.panel.panel-default {% trans "Summary" %}
+        div.panel-heading
+          div.panel-content {{ object.summary }}
+
 
 {% endblock content %}
