--- a/templates/search/card_edit.jade
+++ b/templates/search/card_edit.jade
@@ -67,51 +67,52 @@ div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
         input.form-control(type="url", ng-model="details_url")
 
   .row
-  h5 {% trans "Authors" %}:
-  span
-        input(
-            type="text",
-            ng-model="{% verbatim %} author_input {% endverbatim %}"
-            typeahead="{% verbatim %} author.fields.name for author in getItemsApi('/api/authors', $viewValue, 'authors_selected') {% endverbatim %}"
-            typeahead-min-length="3"
-            typeahead-on-select="add_selected_item($item, 'author_input', 'authors_selected')"
-        )
-        a(target="_blank", href="/admin/search/author/add")
-          i.glyphicon.glyphicon-plus-sign
+    .col-lg-6
+        h5 {% trans "Authors" %}:
+        span
+              input(
+                  type="text",
+                  ng-model="{% verbatim %} author_input {% endverbatim %}"
+                  typeahead="{% verbatim %} author.fields.name for author in getItemsApi('/api/authors', $viewValue, 'authors_selected') {% endverbatim %}"
+                  typeahead-min-length="3"
+                  typeahead-on-select="add_selected_item($item, 'author_input', 'authors_selected')"
+              )
+              a(target="_blank", href="/admin/search/author/add")
+                i.glyphicon.glyphicon-plus-sign
 
-   span(ng-repeat="auth in authors_selected")
-    //- div {% verbatim %} {{ auth.name }} {% endverbatim %}
-    span {% verbatim %} {{ auth.fields.name }} {% endverbatim %}
-      i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index, 'authors_selected')")
+         span(ng-repeat="auth in authors_selected")
+          //- div {% verbatim %} {{ auth.name }} {% endverbatim %}
+          span {% verbatim %} {{ auth.fields.name }} {% endverbatim %}
+            i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index, 'authors_selected')")
 
 
-  h5 {% trans "Publishers" %}
-  span
-    input(
-        type="text",
-        ng-model="{% verbatim %} pub_input {% endverbatim %}"
-        typeahead="{% verbatim %} pub.fields.name for pub in getItemsApi('/api/publishers', $viewValue, 'pubs_selected') {% endverbatim %}"
-        typeahead-min-length="3"
-        typeahead-on-select="add_selected_item($item, 'pub_input', 'pubs_selected')"
-    )
-    a(target="_blank", href="/admin/search/publisher/add")
-      i.glyphicon.glyphicon-plus-sign
+        h5 {% trans "Publishers" %}
+        span
+          input(
+              type="text",
+              ng-model="{% verbatim %} pub_input {% endverbatim %}"
+              typeahead="{% verbatim %} pub.fields.name for pub in getItemsApi('/api/publishers', $viewValue, 'pubs_selected') {% endverbatim %}"
+              typeahead-min-length="3"
+              typeahead-on-select="add_selected_item($item, 'pub_input', 'pubs_selected')"
+          )
+          a(target="_blank", href="/admin/search/publisher/add")
+            i.glyphicon.glyphicon-plus-sign
 
-  span(ng-repeat="pub in pubs_selected")
-    span {% verbatim %} {{ pub.fields.name }} {% endverbatim %}
-      i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index, 'pubs_selected')")
+        span(ng-repeat="pub in pubs_selected")
+          span {% verbatim %} {{ pub.fields.name }} {% endverbatim %}
+            i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index, 'pubs_selected')")
 
-  div
-    h5 {% trans "Distributor" %}
-  div
-    ui-select(ng-model="distributor")
-      ui-select-match
-        span(ng-bind="$select.selected.name")
-      ui-select-choices(repeat="item in (distributor_list | filter:$select.search) track by item.id")
-        span(ng-bind="item.name")
-    a(target="_blank", href="/admin/search/distributor/add")
-          i.glyphicon.glyphicon-plus-sign
+        div
+          h5 {% trans "Distributor" %}
+        div
+          div {% verbatim %} {{ distributor }} {% endverbatim %}
           ui-select(ng-model="distributor.selected")
+            ui-select-match
+              span(ng-bind="$select.selected.name")
+            ui-select-choices(repeat="item in (distributor_list | filter:$select.search) track by item.id")
+              span(ng-bind="item.name")
+          a(target="_blank", href="/admin/search/distributor/add")
+                i.glyphicon.glyphicon-plus-sign
 
   input.btn.btn-primary(value="{% trans 'View card' %}", ng-click="validate('view')")
   input.btn.btn-primary(value="{% trans 'Buy...' %}", ng-click="validate('buy')")
