--- a/templates/search/card_edit.jade
+++ b/templates/search/card_edit.jade
@@ -103,16 +103,22 @@ div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
             i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index, 'pubs_selected')")
 
         div
-          h5 {% trans "Distributor" %}
+          span
+            h5 {% trans "Distributor" %}:
+              span {% verbatim %} {{ distributor.repr }} {% endverbatim %}
         div
-          div {% verbatim %} {{ distributor }} {% endverbatim %}
+
           ui-select(ng-model="distributor.selected")
             ui-select-match
-              span(ng-bind="$select.selected.name")
-            ui-select-choices(repeat="item in (distributor_list | filter:$select.search) track by item.id")
+              span(ng-bind="$select.selected.repr")
+            ui-select-choices(
+              repeat="item in (distributor_list | filter:$select.search) track by item.id",
+              refresh="refreshDistributors($select.search, $select)",
+              refresh-delay="100")
               span(ng-bind="item.name")
           a(target="_blank", href="/admin/search/distributor/add")
-                i.glyphicon.glyphicon-plus-sign
+                i.glyphicon.glyphicon-plus-sign(title='{% trans "Add a distributor" %}')
+
 
   input.btn.btn-primary(value="{% trans 'View card' %}", ng-click="validate('view')")
   input.btn.btn-primary(value="{% trans 'Buy...' %}", ng-click="validate('buy')")
