Two simple but real charts in dashboard

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -32,7 +32,8 @@ html(ng-app="abelujo")
     nav.navbar.navbar-default(role="navigation")
       div.navbar-collapse
         ul.nav.navbar-nav
-          li.active(href="#") Abelujo
+          li.active(href="#")
+            a(href="/") Abelujo
         ul.nav.navbar-nav.navbar-right
           li
            span
